Update from July 15, 2020

--- a/62653-h/62653-h.htm
+++ b/62653-h/62653-h.htm
@@ -100,7 +100,7 @@
 
 <pre>
 
-The Project Gutenberg EBook of The Ball of Fire, by
+The Project Gutenberg EBook of The Ball of Fire, by 
 George Randolph Chester and Lilian Chester
 
 This eBook is for the use of anyone anywhere in the United States and
@@ -10955,7 +10955,7 @@ has been said, are only parts of it, like principalities in
 a kingdom. There isn’t a nook or corner on the globe
 where one finger of my giant does not rest. The armies
 which swept down from the north and devastated Europe,
-the hordes which spread from Rome, the legions
+the hoards which spread from Rome, the legions
 which marched to Moscow, even those mighty armies
 of the Iliad and the Odyssey were insignificant as compared
 to the sway of this tremendous organisation! All
@@ -14387,7 +14387,7 @@ it in the sky?”</p>
 
 
 
-End of the Project Gutenberg EBook of The Ball of Fire, by
+End of the Project Gutenberg EBook of The Ball of Fire, by 
 George Randolph Chester and Lilian Chester
 
 *** END OF THIS PROJECT GUTENBERG EBOOK THE BALL OF FIRE ***
